--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/Estisui/js-react-developer-project-12/workflows/hexlet-check/badge.svg)](https://github.com/Estisui/js-react-developer-project-12/actions)",
   "main": "index.js",
   "scripts": {
-    "build": "npm run build --prefix frontend",
+    "build": "cd frontend && prettier --write . && npm run build",
     "start": "start-server -s ./frontend/build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "cd frontend && npm ci"
