--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "formik": "^2.4.4",
+    "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.3.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
