--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "[![Actions Status](https://github.com/Estisui/js-react-developer-project-12/workflows/hexlet-check/badge.svg)](https://github.com/Estisui/js-react-developer-project-12/actions)",
   "main": "index.js",
   "scripts": {
-    "build": "cd frontend && prettier --write . && npm run build",
+    "build": "cd frontend && npm run build",
     "start": "start-server -s ./frontend/build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && npm ci"
+    "postinstall": "cd frontend && npm ci",
+    "prettier": "prettier --write ."
   },
   "repository": {
     "type": "git",
