--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "cd frontend && npm run build",
     "start": "npx start-server -s ./frontend/build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "cd frontend && npm ci",
-    "prettier": "prettier --write ."
+    "postinstall": "cd frontend && npm ci"
   },
   "repository": {
     "type": "git",
