--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
+    "classnames": "^2.3.2",
     "formik": "^2.4.4",
     "i18next": "^23.6.0",
     "leo-profanity": "^1.7.0",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
